<resources>
    <string name="app_name">Cowtrol</string>
    <!-- Login Activity -->
    <string name="tv_ingresar_usuario">Ingrese su usuario</string>
    <string name="tv_ingrese_contrasena">Ingrese su contraseña</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="et_crear_cuenta">¿Aún no tienes una cuenta?</string>

    <!-- Principal Activity -->
    <string name="tv_rancho">Rancho</string>
    <string name="tv_usuario">Usuario</string>
    <string name="tv_trabajador">Trabajador</string>
    <string name="tv_becerro">Becerros</string>
    <string name="tv_reporte">Reportes</string>
    <string name="tv_control_reproduccion">Control de \nreproducción </string>
    <string name="tv_asesoria">Asesoria \nVeterinaria</string>
    <string name="btn_cerrar_sesion">Cerrar Sesion</string>
    <string name="tv_potrero">Potrero</string>

    <!-- Registrar Trabajador Activity -->
    <string name="tv_registrar_trabajador_titulo">Registrar Trabajador</string>
    <string name="tv_potrerio_asignado">Potrero Asignado</string>
    <string name="tv_puesto_trabajador">Puesto</string>
    <string name="rb_no_especifico">No especificar</string>
    <string name="rb_hombre">Hombre</string>
    <string name="rb_mujer">Mujer</string>
    <string name="btn_guardar">Guardar</string>

    <!-- Control de Reproducción Activity -->
    <string name="tv_titulo_reproduccion">Control de Reproducción</string>
    <string name="tv_vaca">Vaca</string>
    <string name="tv_fecha_revision">Fecha de Revisión</string>
    <string name="tv_temporada">Temporada de Reproducción</string>
    <string name="tv_dia_parto">Dia de Parto</string>
    <string name="tv_tipo">Tipo</string>
    <string name="tv_Descripcion">Descripción</string>
    <string name="switch_cargada">Cargada</string>

    <!-- Control de Reproducción Main Activity -->
    <string name="btn_añadir_control">Añadir</string>

    <!-- Dialog XML -->
    <string name="tv_titulo_dialog">Asignar Evento</string>
    <string name="tv_fecha_dialogo">Fecha</string>
    <string name="tv_tipo_dialogo">Tipo</string>
    <string name="tv_descripcion_dialogo">Descripcion</string>

    <!-- Menu Potrero Activity -->
    <string name="tv_titulo_menu_potrero">Potreros</string>
    <string name="tv_añadir_potrero">Añadir Potrero</string>
    <string name="tv_ver_potrero">Ver Potreros</string>
    
    <!--Registro rancho-->
    <string name="registra_tu_rancho">Registra tu rancho</string>
    <string name="nombre">Nombre</string>
    <string name="ubicacion">Ubicación</string>
    <string name="telefono">Telefono</string>
    <string name="provincia">Provincia</string>
    <string name="registrar_rancho">Registrar rancho</string>

    <!--Modificar rancho-->
    <string name="modifica_tu_rancho">Modifica tu \nrancho</string>
    <string name="guardar_cambios">Guardar Cambios</string>

    <!--Agregar potrero-->
    <string name="tv_registra_potrero_titulo">Registra un\npotrero</string>
    <string name="tv_nombre">Nombre</string>
    <string name="tv_ubicacion">Ubicación</string>
    <string name="tv_tamanio">Tamaño</string>
    <string name="et_ancho">Ancho</string>
    <string name="et_largo">Largo</string>
    <string name="et_alto">Alto</string>
    <string name="tv_capacidad">Capacidad</string>
    <string name="tv_numero_potrero">Número de potrero</string>
    <string name="bt_registrar_potrero">Registrar Potrero</string>

    <!--Visualizar potrero-->
    <string name="titulo_potrero">Potrero</string>
    <string name="hint">Potrero</string>
    <string name="capacidad">Capacidad 10/30</string>
    <string name="siniiga">SINIIGA</string>
    <string name="edad">Edad</string>
    <string name="vaca_nombre">Nombre:</string>
    <string name="reproduccion">Reproducción</string>

    <string name="crear_cuenta">Crear cuenta</string>
    <string name="tipo_usuario">Tipo de usuario</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="contrasenia">Contraseña</string>
    <string name="cuenta_existente">¿Ya tienes una cuenta?</string>
    <string name="registrar_becerro">Registra un becerro</string>
    <string name="macho">Macho</string>
    <string name="hembra">Hembra</string>
    <string name="edad_becerro">Edad</string>
    <string name="peso_becerro">Peso</string>
    <string name="al_nacer">Al nacer</string>
    <string name="al_destete">Al destete</string>
    <string name="doce_meses">12 meses</string>
    <string name="potrero">Potrero</string>
    <string name="fecha_nacimiento">Fecha de nacimiento</string>
    <string name="registrar_animal">Registrar animal</string>
    <string name="modificar_becerro">Modificar becerro</string>

    <!--Asesoría veterinaria-->
    <string name="tv_asesoria_veterinaria">Asesoría \nveterinaria</string>
    <string name="tv_nombre_veterinario">Nombre:</string>
    <string name="tv_telefono">Teléfono:</string>

    <!--Menu becerro-->
    <string name="seleccion_opcion_becerro">Mis becerros</string>
    <string name="registrar_becerro_menu">Registrar becerro</string>
    <string name="ver_becerros">Ver becerros</string>

    <string name="editar_becerro">Editar</string>
    <string name="becerros_registrados">Becerros registrados</string>
    <string name="no_becerros">Por el momento no hay becerros registrados</string>

</resources>