<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/primary">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tv_titulo_dialog"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:text="@string/tv_fecha_dialogo"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="15dp"/>
    <EditText
        android:id="@+id/et_fecha_dialog"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:paddingStart="10dp"
        android:background="@drawable/et_campo_datos"
        android:hint="dd/mm/AAAA"
        android:drawableEnd="@drawable/calendar_plus"
        android:clickable="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:text="@string/tv_tipo_dialogo"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="15dp"/>
    <Spinner
        android:id="@+id/sp_tipo_dialog"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:paddingStart="10dp"
        android:background="@drawable/et_campo_datos"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:text="@string/tv_descripcion_dialogo"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="15dp"/>
    <EditText
        android:id="@+id/et_descripcion_dialog"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:paddingStart="10dp"
        android:background="@drawable/et_campo_datos"/>

    <Button
        android:id="@+id/btn_guardar_evento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_guardar"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/accent"/>

</LinearLayout>