<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuBecerroActivity"
    android:orientation="vertical"
    android:background="@color/surface">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seleccion_opcion_becerro"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:layout_marginTop="4dp"
        android:textStyle="bold"
        android:background="@drawable/bordes_text_view"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btn_registrar_becerro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/accent"
        android:paddingStart="75dp"
        android:paddingEnd="75dp"
        android:text="@string/registrar_becerro_menu"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btn_ver_becerros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/accent"
        android:paddingStart="75dp"
        android:paddingEnd="75dp"
        android:text="@string/ver_becerros"
        android:textColor="@color/black"
        android:textSize="20dp" />

</LinearLayout>